force-app/main/default/objects/Delivery__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <formula>CreatedDate +  Route__r.Travel_Time_mins__c</formula>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>