force-app/main/default/objects/Delivery__c/fields/From_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>From_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>