force-app/main/default/objects/Delivery__c/fields/From_Warehouse_Manager__c.field-meta.xml
<CustomField>
    <fullName>From_Warehouse_Manager__c</fullName>
    <label>From Warehouse Manager</label>
    <type>Email</type>
</CustomField>