force-app/main/default/objects/Delivery__c/fields/To_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>To_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Warehouse</label>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Deliveries (To Warehouse)</relationshipLabel>
    <relationshipName>Deliveries1</relationshipName>
    <type>Lookup</type>
</CustomField>