force-app/main/default/objects/Delivery__c/fields/To_Warehouse_Manager__c.field-meta.xml
<CustomField>
    <fullName>To_Warehouse_Manager__c</fullName>
    <label>To Warehouse Manager</label>
    <type>Email</type>
</CustomField>