force-app/main/default/objects/Delivery__c/recordTypes/Completed_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Completed_Delivery</fullName>
    <active>true</active>
    <description>Record type for completed deliveries</description>
    <label>Completed Delivery</label>
</RecordType>