force-app/main/default/objects/Delivery__c/recordTypes/Open_Delivery.recordType-meta.xml
<RecordType>
    <fullName>Open_Delivery</fullName>
    <active>true</active>
    <description>Record type for creating new deliveries</description>
    <label>Open Delivery</label>
</RecordType>