force-app/main/default/objects/Delivery__c/validationRules/invalid_parked_to_completed_2.validationRule-meta.xml
<ValidationRule>
    <fullName>invalid_parked_to_completed_2</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(PRIORVALUE( Status__c ),&quot;Parked&quot;) &amp;&amp; ISPICKVAL( Status__c , &quot;Completed&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Status cannot change from Parked to Completed</errorMessage>
</ValidationRule>