force-app/main/default/objects/Delivery__c/validationRules/truck_on_delivery.validationRule-meta.xml
<ValidationRule>
    <fullName>truck_on_delivery</fullName>
    <active>true</active>
    <description>Truck is en route to delivery</description>
    <errorConditionFormula>ISPICKVAL(Truck__r.Status__c, &apos;On Delivery&apos;) &amp;&amp; ISNEW()</errorConditionFormula>
    <errorDisplayField>Truck__c</errorDisplayField>
    <errorMessage>Truck is currently on a delivery task</errorMessage>
</ValidationRule>