force-app/main/default/objects/Delivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Truck__c</columns>
    <columns>From_Warehouse__c</columns>
    <columns>To_Warehouse__c</columns>
    <columns>Route__c</columns>
    <columns>Status__c</columns>
    <columns>ETA__c</columns>
    <columns>Driver__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>